compiler/tests/fail/common/typealias_arrayelement.jazz


type x = u64[3];


fn test() {
    reg x[3] y;
}